[package]
name = "opengov-wbach-abfall-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.38"
[dependencies.ical]
version = "0.7.*"
default-features = false
features = ["ical", "vcard"]
